--- a/css/form-styling.css
+++ b/css/form-styling.css
@@ -2,4 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #e6e4df;
+}
+
+.fields-export-column .form-type-checkbox{
+  margin-bottom: 5px;
+}
+
+.fields-export-column .form-type-textfield{
+  margin-top: 0;
 }
